Java 21!